# spqr

./: .gitignore  CLAUDE.md  JOURNAL.md  README.md  pyproject.toml
src/spqr/: __main__.py  bootstrap.py  cli.py
src/spqr/engine/: __init__.py  commands.py  events.py  rng.py  tick.py  world.py
src/spqr/persistence/: __init__.py  save.py  schema.py
src/spqr/sim/models/: __init__.py  building.py  citizen.py  city.py  district.py  population.py  province.py  resources.py  tile.py
src/spqr/sim/systems/: __init__.py  agents.py  construction.py  economy.py  events.py  flavor.py  grain.py  housing.py  industry.py  labor.py  military.py  population.py  spatial.py
src/spqr/ui/: app.py  splash.py
src/spqr/ui/screens/: __init__.py  build_menu.py  config.py  info.py  labor.py  population.py
src/spqr/ui/widgets/: inspector.py  log_panel.py  map_view.py  status_bar.py
tests/: _helpers.py  test_app_escape_clears_tool.py  test_build_menu.py  test_config_screen.py  test_demolition.py  test_flavor.py  test_grain.py  test_grain_farm_fallback.py  test_housing.py  test_industrial_nuisance.py  test_industry.py  test_industry_adjacency.py  test_industry_buffer.py  test_info_screen.py  test_inspector.py  test_labor_priority.py  test_labor_screen.py  test_map_view.py  test_office.py  test_office_footprint.py  test_persistence_roundtrip.py  test_population.py  test_procgen_determinism.py  test_splash.py  test_tick.py  test_tier_furniture_costs.py  test_vegetables.py  test_warehouse_caps.py  test_workshop.py  test_workshop_nuisance.py  test_workshop_output.py  test_world_smoke.py
(+4 files in other folders)
