[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spqr"
version = "0.0.1"
description = "Roman city simulation engine (Dwarf Fortress x SimCity)"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "msgspec>=0.18",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
spqr = "spqr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
